--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "express": "^4.21.2"
   },
-  "scripts": {
-    "build": "echo 'Build process triggered'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+ "scripts": {
+  "build": "echo 'Build process triggered'",
+  "test": "echo 'No tests configured'"
   }
 }
