--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                 <version>${frontend.plugin.version}</version>
                 <executions>
                     <!-- Install Node.js and npm -->
-                    <execution> //hoi
+                    <execution>
                         <id>install-node-and-npm</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
